--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,6 +1,8 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
+allow 102.211.56.12;
+allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
@@ -216,6 +218,8 @@ allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.164;
+allow 178.175.148.104;
+allow 178.175.148.203;
 allow 178.175.148.246;
 allow 178.17.58.159;
 allow 178.20.55.16;
@@ -275,7 +279,6 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
-allow 185.132.53.150;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -289,7 +292,6 @@ allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
 allow 185.191.239.158;
-allow 185.191.239.49;
 allow 185.193.52.180;
 allow 185.195.71.244;
 allow 185.196.220.250;
@@ -897,7 +899,6 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -923,6 +924,7 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.31;
@@ -949,7 +951,6 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -971,7 +972,6 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1169,8 +1169,10 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:22::cea7;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
+allow 2a00:1dc0:caff:82::c9ed;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
@@ -1576,6 +1578,8 @@ allow 2a12:bec4:1821:3a8::a;
 allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2c0f:6c0:0:2::6983;
+allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
@@ -1661,6 +1665,7 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.143.200.32;
+allow 45.144.209.17;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
@@ -1785,7 +1790,6 @@ allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
