--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,6 +1,8 @@
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 102.130.127.117;
+deny 102.211.56.12;
+deny 102.211.56.200;
 deny 103.109.101.105;
 deny 103.146.203.11;
 deny 103.164.54.199;
@@ -216,6 +218,8 @@ deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.164;
+deny 178.175.148.104;
+deny 178.175.148.203;
 deny 178.175.148.246;
 deny 178.17.58.159;
 deny 178.20.55.16;
@@ -275,7 +279,6 @@ deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.47.58;
-deny 185.132.53.150;
 deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
@@ -289,7 +292,6 @@ deny 185.183.157.214;
 deny 185.183.159.40;
 deny 185.191.204.254;
 deny 185.191.239.158;
-deny 185.191.239.49;
 deny 185.193.52.180;
 deny 185.195.71.244;
 deny 185.196.220.250;
@@ -897,7 +899,6 @@ deny 23.129.64.224;
 deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.248.100;
-deny 23.137.253.109;
 deny 23.137.253.113;
 deny 23.137.253.254;
 deny 23.137.253.27;
@@ -923,6 +924,7 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.31;
@@ -949,7 +951,6 @@ deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.93;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -971,7 +972,6 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1169,8 +1169,10 @@ deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
+deny 2a00:1dc0:caff:22::cea7;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:82::c9ed;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
@@ -1576,6 +1578,8 @@ deny 2a12:bec4:1821:3a8::a;
 deny 2a12:de40:21:1be4::;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2c0f:6c0:0:2::6983;
+deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.133.0.235;
@@ -1661,6 +1665,7 @@ deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.143.200.32;
+deny 45.144.209.17;
 deny 45.145.93.133;
 deny 45.148.10.111;
 deny 45.154.98.33;
@@ -1785,7 +1790,6 @@ deny 66.78.40.225;
 deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
-deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
