--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -135,7 +135,6 @@ deny 2402:1f00:8100:400::9;
 deny 2407:3640:2207:8882::1;
 deny 2407:3640:2259:6302::1;
 deny 2407:3641:2259:8208::1;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -157,7 +156,6 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -354,8 +352,10 @@ deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
+deny 2a00:1dc0:caff:22::cea7;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:82::c9ed;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
@@ -761,3 +761,5 @@ deny 2a12:bec4:1821:3a8::a;
 deny 2a12:de40:21:1be4::;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
+deny 2c0f:6c0:0:2::6983;
+deny 2c0f:6c0:0:d::d28b;
