--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -82,7 +82,6 @@ deny 108.59.12.41;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
-deny 109.228.160.190;
 deny 109.237.27.11;
 deny 109.69.67.17;
 deny 109.70.100.1;
@@ -302,7 +301,18 @@ deny 185.207.107.216;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
+deny 185.220.101.100;
+deny 185.220.101.101;
+deny 185.220.101.102;
+deny 185.220.101.103;
+deny 185.220.101.104;
+deny 185.220.101.105;
+deny 185.220.101.106;
+deny 185.220.101.107;
+deny 185.220.101.108;
+deny 185.220.101.109;
 deny 185.220.101.11;
+deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.129;
 deny 185.220.101.13;
@@ -412,6 +422,10 @@ deny 185.220.101.63;
 deny 185.220.101.7;
 deny 185.220.101.8;
 deny 185.220.101.9;
+deny 185.220.101.96;
+deny 185.220.101.97;
+deny 185.220.101.98;
+deny 185.220.101.99;
 deny 185.225.69.187;
 deny 185.225.69.203;
 deny 185.225.69.232;
@@ -454,6 +468,7 @@ deny 185.40.4.121;
 deny 185.40.4.127;
 deny 185.40.4.132;
 deny 185.40.4.143;
+deny 185.40.4.145;
 deny 185.40.4.149;
 deny 185.40.4.150;
 deny 185.40.4.20;
@@ -781,7 +796,6 @@ deny 213.111.150.96;
 deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
-deny 216.9.224.232;
 deny 217.12.221.131;
 deny 217.182.75.199;
 deny 220.135.36.173;
@@ -883,7 +897,6 @@ deny 23.129.64.224;
 deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.248.100;
-deny 23.137.253.109;
 deny 23.137.253.113;
 deny 23.137.253.254;
 deny 23.137.253.27;
@@ -916,7 +929,6 @@ deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.4;
 deny 23.191.200.5;
-deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -962,7 +974,6 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1223,6 +1234,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1377,6 +1389,21 @@ deny 2a0b:f4c2::3;
 deny 2a0b:f4c2::30;
 deny 2a0b:f4c2::31;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1423,6 +1450,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
 deny 2a0e:4005:1002:ffff:185:40:4:143;
+deny 2a0e:4005:1002:ffff:185:40:4:145;
 deny 2a0e:4005:1002:ffff:185:40:4:149;
 deny 2a0e:4005:1002:ffff:185:40:4:22;
 deny 2a0e:4005:1002:ffff:185:40:4:29;
@@ -1547,7 +1575,6 @@ deny 2a12:a800:9:1:45:88:186:92;
 deny 2a12:bec4:1821:3a6::a;
 deny 2a12:bec4:1821:3a7::a;
 deny 2a12:bec4:1821:3a8::a;
-deny 2a12:de40:21:1be4::;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2c0f:6c0:0:2::6983;
@@ -1558,6 +1585,7 @@ deny 31.133.0.235;
 deny 31.184.236.104;
 deny 31.220.75.237;
 deny 31.40.204.186;
+deny 31.40.204.206;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.114.50.124;
@@ -1699,6 +1727,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1808,7 +1837,6 @@ deny 87.120.222.33;
 deny 87.120.254.132;
 deny 87.121.79.9;
 deny 88.151.192.2;
-deny 88.151.194.24;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
