--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -156,7 +156,6 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -416,6 +415,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -570,6 +570,21 @@ set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
 set_real_ip_from 2a0b:f4c2::31;
 set_real_ip_from 2a0b:f4c2::4;
+set_real_ip_from 2a0b:f4c2:4::100;
+set_real_ip_from 2a0b:f4c2:4::101;
+set_real_ip_from 2a0b:f4c2:4::102;
+set_real_ip_from 2a0b:f4c2:4::103;
+set_real_ip_from 2a0b:f4c2:4::104;
+set_real_ip_from 2a0b:f4c2:4::105;
+set_real_ip_from 2a0b:f4c2:4::106;
+set_real_ip_from 2a0b:f4c2:4::107;
+set_real_ip_from 2a0b:f4c2:4::108;
+set_real_ip_from 2a0b:f4c2:4::109;
+set_real_ip_from 2a0b:f4c2:4::110;
+set_real_ip_from 2a0b:f4c2:4::96;
+set_real_ip_from 2a0b:f4c2:4::97;
+set_real_ip_from 2a0b:f4c2:4::98;
+set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
@@ -616,6 +631,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:132;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:143;
+set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:145;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:149;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:22;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:29;
@@ -740,7 +756,6 @@ set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a12:bec4:1821:3a6::a;
 set_real_ip_from 2a12:bec4:1821:3a7::a;
 set_real_ip_from 2a12:bec4:1821:3a8::a;
-set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2c0f:6c0:0:2::6983;
